--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "tslint": "^6.1.3",
     "typescript": "^4.4.3"
+  },
+  "devDependencies": {
+    "@types/node": "^16.10.9"
   }
 }
